# gsutil-cp-reimplementation

./: .flake8  .gitignore  Makefile  README.md  gscp.py  main.py  pyproject.toml
