[tool.poetry]
name = "gsutil-cp-reimplementation"
version = "0.1.0"
description = ""
authors = ["Evgeniy Shubin <evgeniy.shubin.android@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-storage = "^1.36.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
